objects/spExams__Exam_Recipient_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>spExams__Api_Object_Name__c</fullName>
        <label>Api Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__Field_Email__c</fullName>
        <label>Field Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__Field_First_Name__c</fullName>
        <label>Field First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__Field_Last_Name__c</fullName>
        <label>Field Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exam Recipient Mapping</label>
    <nameField>
        <displayFormat>ERM-{0000}</displayFormat>
        <label>Exam Recipient Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Recipients Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>